# oaebu-workflows

./: .coveragerc  .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  deploy.sh  hello_world.txt  hello_world2.txt  packages.txt  pyproject.toml  readthedocs.yaml  requirements.sh  requirements.txt  setup.cfg  strategy.ini
dags/: load_dags.py
oaebu-workflows/: pyproject.toml
oaebu-workflows/oaebu_workflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oaebu-workflows/oaebu_workflows/dags/onix_workflow/: onix_work_aggregation.py  onix_workflow.py
oaebu-workflows/oaebu_workflows/dags/thoth_telescope/: thoth_telescope.py
oaebu-workflows/oaebu_workflows/google_analytics3_telescope/sql/: book_metrics_country_body_google_analytics3.sql.jinja2  month_metrics_sum_google_analytics3.sql
oaebu-workflows/oaebu_workflows/google_analytics3_telescope/tests/: test_google_analytics3_telescope.py
oaebu-workflows/oaebu_workflows/google_books_telescope/: google_books_telescope.py
oaebu-workflows/oaebu_workflows/google_books_telescope/schema/: book_product_metadata_google_books_traffic.json
oaebu-workflows/oaebu_workflows/google_books_telescope/sql/: book_product_body_google_books_traffic.sql.jinja2  month_null_google_books_sales.sql
oaebu-workflows/oaebu_workflows/irus_fulcrum_telescope/: irus_fulcrum_telescope.py
oaebu-workflows/oaebu_workflows/irus_fulcrum_telescope/sql/: book_metrics_country_join_irus_fulcrum.sql  book_product_body_irus_fulcrum.sql.jinja2
oaebu-workflows/oaebu_workflows/irus_oapen_telescope/: irus_oapen_telescope.py
oaebu-workflows/oaebu_workflows/irus_oapen_telescope/schema/: book_product_metrics_irus_oapen.json
oaebu-workflows/oaebu_workflows/irus_oapen_telescope/sql/: month_metrics_sum_irus_oapen.sql
oaebu-workflows/oaebu_workflows/jstor_telescope/: jstor_telescope.py
oaebu-workflows/oaebu_workflows/onix_telescope/: onix_telescope.py
oaebu-workflows/oaebu_workflows/onix_workflow/: onix_workflow.py
oaebu-workflows/oaebu_workflows/onix_workflow/sql/: book_metrics_author.sql.jinja2
oaebu-workflows/oaebu_workflows/schema/internet_archive/: book_metrics_country_internet_archive.json
oaebu-workflows/oaebu_workflows/tests/: test_oaebu_partners.py
oaebu-workflows/oaebu_workflows/thoth_telescope/: thoth_telescope.py
oaebu-workflows/oaebu_workflows/ucl_discovery_telescope/: ucl_discovery_telescope.py
(+958 files in other folders)
