[build-system]
requires = ["setuptools>=44", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oaebu-workflows"
version = "1.0.0"
description = "Oaebu Workflows provides Apache Airflow Workflows for fetching, processing and analysing data about open access books."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["science", "data", "workflows", "academic institutes", "oaebu-workflows"]
authors = [{ name = "Curtin University", email = "agent@observatory.academy" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.9.3,<5",
    "onixcheck>=0.9.7,<1",
    "ratelimit>=2.2.1,<3",
    "apache-airflow-providers-cncf-kubernetes>=7.4.0",
]

[project.optional-dependencies]
test = [
    "liccheck>=0.4.9,<1",
    "flake8>=3.8.0,<4",
    "coverage>=5.2,<6",
    "faker>=8.12.1,<9",
    "vcrpy>=4.1.1,<5",
    "responses>=0,<1",
]

[project.urls]
"Homepage" = "https://github.com/The-Academic-Observatory/oaebu-workflows"
"Bug Tracker" = "https://github.com/The-Academic-Observatory/oaebu-workflows/issues"
"Documentation" = "https://oaebu-workflows.readthedocs.io/en/latest/"
"Source" = "https://github.com/The-Academic-Observatory/oaebu-workflows"
"Repository" = "https://github.com/The-Academic-Observatory/oaebu-workflows"